jpa的相关操作，创建数据库并通过ajax获取数据

--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.datasource.hikari.minimum-idle=5
 # JPA 相关配置
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#视图层控制
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
+spring.mvc.static-path-pattern=/static/
