--- a/yaml/src/main/resources/application.yaml
+++ b/yaml/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-#yaml配置
+#yaml配置注入
 person:
  age: 20
  name: 张三
@@ -12,4 +12,20 @@ person:
  dog:
   name: 旺财
   age: 8
+#spring boot 的多环境配置
+#spring:
+# profiles:
+#  active: dev
+server:
+  port: 8080
+---
 
+sever:
+ port: 8081
+spring:
+ profiles: dev
+---
+spring:
+  profiles: test
+sever:
+  port: 8082
