--- a/security/pom.xml
+++ b/security/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ying</groupId>
@@ -16,12 +16,14 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <spring-security.version>5.2.1.BUILD-SNAPSHOT</spring-security.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
